# raytracing

./: CMakeLists.txt  README.md  main.cc  vec3.h
include/: color.h  ray.h  vec3.h
src/: main.cpp  raytracing.cpp
